--- a/README
+++ b/README
@@ -1,5 +1,19 @@
 
-master: THis directory contains the control modules for LoCo. 
+# LoFASM Tools Python Package
+---
+
+## Installation
+To install run the setup.py script with root permissions
+
+	sudo python setup.py install
+
+## Dependencies
+* numpy
+* scipy
+* astropy
+* matplotlib
+
+
 
 
 
